fix(css): fix contrast of css examples
This commit will improve contrast of inset, inset-inline, inset-block-end, inset-block-start, inset-block, inset-inline-end, and inset-inline-start.

--- a/live-examples/css-examples/positioned-layout/inset.css
+++ b/live-examples/css-examples/positioned-layout/inset.css
@@ -1,5 +1,5 @@
 .example-container {
-    border: 0.75em solid;
+    border: 0.75em solid #ad1457;
     padding: 0.75em;
     text-align: left;
     position: relative;
@@ -8,8 +8,9 @@
 }
 
 #example-element {
-    background-color: #ff7100;
-    border: 3px solid #ff0000;
+    background-color: #07136c;
+    border: 6px solid #ffa000;
+    color: white;
     position: absolute;
     inset: 0;
 }
